objects/Product_Model_Group__c.object
<CustomObject>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <externalId>true</externalId>
        <label>Launchbox ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Series_Group_Name__c</fullName>
        <label>Parent Series Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup reference to Product Model Master record whose records are populating from Integration</description>
        <label>Product Model Master</label>
        <referenceTo>Product_Model_Master__c</referenceTo>
        <relationshipLabel>Product Model Groups</relationshipLabel>
        <relationshipName>Product_Model_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Series_Group_Name__c</fullName>
        <label>Product Series Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <label>Subdivision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Subdivision</valueSetName>
        </valueSet>
    </fields>
    <label>Product Model Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Model Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Model Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>